Spacing issue corrected

--- a/index.css
+++ b/index.css
@@ -1,5 +1,11 @@
+html,
 body {
-    background-color: lightgrey;
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden;
+    background-color: grey;
     font-family: 'Roboto Slab',
     serif;
 }
@@ -92,17 +98,17 @@ p {
     clear: right;
     text-decoration: none;
     background-color: lightgrey;
-    margin: 0 3vh;
+    margin: 0 1.5vw;
     line-height: 10vh;
 }
 
 label {
     margin: 0 5vw 0 0;
-    font-size: 3vh;
+    font-size: 4vh;
     line-height: 10vh;
     display: none;
-    width: 5vw;
-    float: right;
+    /* width: 10vw; */
+    /* float: right; */
 }
 
 #toggle {
@@ -224,16 +230,17 @@ label {
 
 .sites {
     border-radius: 10%;
-    height: 35vh;
-    width: 35vh;
+    height: 30vh;
+    width: 30vh;
     padding: 1vh;
-    margin-bottom: 10vh;
+    margin-bottom: 5vh;
 }
 
 .footer {
     padding: 1vh;
     margin-top: 0px;
-    font-size: 1vh;
+    font-size: 2vh;
     color: black;
     text-shadow: -1px 0 black, 0 1px black, 1px 0 white, 0 -1px lightgrey;
+    text-decoration: none;
 }
